made some fixes on mobile responsiveness

--- a/css/queries.css
+++ b/css/queries.css
@@ -1,7 +1,7 @@
 @media (max-width: 62em) {
   .inner-container {
     max-width: 80rem;
-    margin: 12rem 2rem;
+    margin: 10rem 2rem;
   }
 
   .section-img,
@@ -153,10 +153,13 @@
     color: #fff;
   }
 
+  .nav .nav-btn {
+    width: 100%;
+    height: 5rem;
+  }
+
   .nav {
-    margin-top: 8rem;
-    padding-right: 3rem;
-    align-items: flex-end;
+    padding: 0 2rem;
     background-color: #050520e8;
     position: absolute;
     top: 0;
@@ -178,17 +181,9 @@
     transform: translateX(0);
   }
 
-  .nav-links-list {
-    align-items: flex-end;
-  }
-
-  .nav-links,
-  .nav-btn {
-    margin-left: 40%;
-  }
-
   .nav-open .mobile-menu-icon[name="close-outline"] {
     display: block;
+    color: #fff;
   }
 
   .nav-open .mobile-menu-icon[name="menu-outline"] {
@@ -228,6 +223,10 @@
   .header-inner {
     display: flex;
     justify-content: space-between;
+  }
+
+  .subheading-1 {
+    width: 90%;
   }
 
   .main-container {
@@ -303,12 +302,13 @@
   }
 
   h3 {
+    width: 100%;
     font-size: 2rem;
     margin-bottom: 4rem;
   }
 
   .colored-section-txt {
-    margin: 4rem;
+    margin: 4rem 2rem;
   }
 
   .colored-section-img {
@@ -333,6 +333,9 @@
     width: 75%;
   }
 
+  .subheading-1.cta-subheading {
+    width: 100%;
+  }
   .cta-img {
     width: 50%;
   }
@@ -354,5 +357,10 @@
   .stat-logo-1 {
     justify-self: end;
     align-self: center;
+  }
+
+  .stat-logo-1,
+  .stat-logo-2 {
+    width: 100%;
   }
 }
